pkg/plugins/policies/meshloadbalancingstrategy/plugin/v1alpha1/testdata/basic.gateway_route.golden.yaml
ignorePortInHostMatching: true
name: sample-gateway:HTTP:8080
requestHeadersToRemove:
- x-kuma-tags
validateClusters: false
virtualHosts:
- domains:
  - '*'
  name: '*'
  routes:
  - match:
      path: /
    route:
      clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
      hashPolicy:
      - queryParameter:
          name: queryparam
        terminal: true
      - connectionProperties:
          sourceIp: true
      weightedClusters:
        clusters:
        - name: backend-26cb64fa4e85e7b7
          requestHeadersToAdd:
          - header:
              key: x-kuma-tags
              value: '&kuma.io/service=sample-gateway&'
          weight: 1
